--- a/src/index.html
+++ b/src/index.html
@@ -46,9 +46,9 @@
 <body>
 
     <aside class="sidepanel">
-        <a href="#" class="sidepanel__link"><img src="icons/social/facebook.svg" alt="facebook"></a>
-        <a href="#" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="instagram"></a>
-        <a href="#" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
+        <a href="https://www.facebook.com/profile.php?id=100015916248154" class="sidepanel__link"><img src="icons/social/facebook.svg" alt="facebook"></a>
+        <a href="https://www.instagram.com/l.oleg.a?igsh=MTR5ampmb3Q2M3A2OA==" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="instagram"></a>
+        <a href="https://github.com/Gachibindera" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
         <div class="sidepanel__divider"></div>
         <div class="sidepanel__text">Social media</div>
     </aside>
@@ -63,18 +63,18 @@
             </div>
             <nav>
                 <ul class="menu__list">
-                    <li class="menu__link"><a href="#">about me</a></li>
-                    <li class="menu__link"><a href="#">my experience</a></li>
-                    <li class="menu__link"><a href="#">my skills</a></li>
-                    <li class="menu__link"><a href="#">my works</a></li>
-                    <li class="menu__link"><a href="#">price list</a></li>
-                    <li class="menu__link"><a href="#">contacts</a></li>
+                    <li class="menu__link"><a href="#aboutMe">about me</a></li>
+                    <li class="menu__link"><a href="#resume">my experience</a></li>
+                    <li class="menu__link"><a href="#skills">my skills</a></li>
+                    <li class="menu__link"><a href="#portfolio">my works</a></li>
+                    <li class="menu__link"><a href="#price">price list</a></li>
+                    <li class="menu__link"><a href="#cont">contacts</a></li>
                 </ul>
             </nav>
             <div class="menu__socials">
-                <a href="#"><img src="icons/social/github-black.svg" alt="github"></a>
-                <a href="#"><img src="icons/social/instagram-black.svg" alt="instagram"></a>
-                <a href="#"><img src="icons/social/facebook-black.svg" alt="facebook"></a>
+                <a href="https://github.com/Gachibindera"><img src="icons/social/github-black.svg" alt="github"></a>
+                <a href="https://www.instagram.com/l.oleg.a?igsh=MTR5ampmb3Q2M3A2OA=="><img src="icons/social/instagram-black.svg" alt="instagram"></a>
+                <a href="https://www.facebook.com/profile.php?id=100015916248154"><img src="icons/social/facebook-black.svg" alt="facebook"></a>
             </div>
         </div>
         <div class="menu__overlay"></div>
@@ -92,15 +92,15 @@
             <div class="title title_fs16 promo__subtitle">My name is Oleh Losh</div>
             <h1 class=" title title_fs48 promo__title">I'm web-developer from Dublin</h1>
             <div class="promo__btns">
-                <a href="" class="promo__link btn">Portfolio</a>
-                <a href="" class="promo__link btn btn_invis">About me</a>
+                <a href="#portfolio" class="promo__link btn">Portfolio</a>
+                <a href="#aboutMe" class="promo__link btn btn_invis">About me</a>
             </div>
     
         </div>
     </section>
 
 
-    <section class="aboutMe">
+    <section id="aboutMe" class="aboutMe">
         <div class="container">
             <div class="aboutMe__info">
                 <div id="photo" class="aboutMe__photo"><img src="img/main_photo2.jpg" alt="photo"></div>
@@ -108,23 +108,23 @@
                     <h3 class="title title_fs16 aboutMe__title">About me</h3>
                     <div class="title title_fs36 aboutMe__subtitle">My name is Oleh</div>
                     <div class="divider"></div>
-                    <p class="aboutMe__main-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                    <p class="aboutMe__main-descr">I am a web developer with experience in building user interfaces and web applications. My skills include proficiency in HTML, CSS, JavaScript, and experience with frameworks such as React and Jquery. My goal is to build effective and creative solutions for clients, ensuring high quality and professionalism in every project.</p>
                 </div>
                 <div id="wrapper" class="aboutMe__wrapper">
                     <div class="aboutMe__text">
                         <div class="aboutMe__label-icon"><img src="icons/about_me/web_development.svg" alt="development"></div>
                         <h4 class="title_fs14 aboutMe__label">Web-development</h4>
-                        <p class="aboutMe__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="aboutMe__descr">I have been doing web development for 4 years. And all this time I develop in this direction, I have a lot of experience in this field.</p>
                     </div>
                     <div id="mobile" class="aboutMe__text">
                         <div class="aboutMe__label-icon"><img src="icons/about_me/mobile_dev.svg" alt="mobile"></div>
                         <h4 class="title_fs14 aboutMe__label">Application development</h4>
-                        <p class="aboutMe__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="aboutMe__descr">I have a background in Application development, and I am also developing in this area.</p>
                     </div>
                     <div class="aboutMe__text">
                         <div class="aboutMe__label-icon"><img src="icons/about_me/design.svg" alt="design"></div>
                         <h4 class="title_fs14 aboutMe__label">UI/UX Design</h4>
-                        <p class="aboutMe__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="aboutMe__descr">I have experience in UI/UX Design. I can make beautiful and clear interfaces of sites</p>
                     </div>
                 </div>
             </div>
@@ -132,7 +132,7 @@
     </section>
 
 
-    <section class="resume">
+    <section id="resume" class="resume">
         <div class="container">
             <h3 class="title title_fs16 resume__title">Experience</h3>
             <div class="title title_fs36 resume__subtitle">What can I do for you</div>
@@ -154,7 +154,7 @@
                                     <p class="resume__item-descr">Junior bachelor's degree in computer science</p>
                                 </div>
                                 <div class="resume__item-body">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. </p>
+                                    <p>I graduated from university, where I learnt the basics of programming. So I am familiar with languages such as C# and SQL. At the university I did internships and gained experience.</p>
                                 </div>
                             </div>
                         </li>
@@ -168,7 +168,7 @@
                                     <p class="resume__item-descr">Web development courses</p>
                                 </div>
                                 <div class="resume__item-body">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. </p>
+                                    <p>I have taken several courses in web development and JavaScript programming language on Udemy.</p>
                                 </div>
                             </div>
                         </li>
@@ -188,7 +188,7 @@
                                     <p class="resume__item-descr">My projects</p>
                                 </div>
                                 <div class="resume__item-body">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. </p>
+                                    <p>I have many projects that you can check out on my github repository.</p>
                                 </div>
                             </div>
                         </li>
@@ -199,9 +199,9 @@
     </section>
 
 
-    <section class="skills">
+    <section id="skills" class="skills">
         <div class="container">
-            <h3 class="title title_fs16 resume__title">Experience</h3>
+            <h3 class="title title_fs16 resume__title">Skills</h3>
             <div class="title title_fs36 resume__subtitle">What can I do for you</div>
             <div class="divider"></div>
 
@@ -305,7 +305,7 @@
     </section>
 
 
-    <section class="portfolio">
+    <section id="portfolio" class="portfolio">
         <div class="container">
             <h3 class="title title_fs16 resume__title">Portfolio</h3>
             <div class="title title_fs36 resume__subtitle">My works</div>
@@ -333,9 +333,9 @@
     </section>
 
 
-    <section class="price">
+    <section id="price" class="price">
         <div class="container">
-            <h3 class="title title_fs16 resume__title">Portfolio</h3>
+            <h3 class="title title_fs16 resume__title">Price list</h3>
             <div class="title title_fs36 resume__subtitle">My works</div>
             <div class="divider"></div>
 
@@ -376,7 +376,7 @@
     </section>
 
 
-    <section class="contacts">
+    <section id="cont" class="contacts">
         <div class="container">
             <div class="contacts__info">
                 <div class="contacts__photo"><img src="img/main_photo2.jpg" alt="photo"></div>
@@ -386,20 +386,20 @@
                     <div class="divider"></div>
                     <p class="contacts__text">Any way you like:</p>
                     <div class="contacts__socials">
-                        <a href="#" class="contacts__link"><img src="icons/social/facebook-footer.svg" alt="facebook"></a>
+                        <a href="https://www.facebook.com/profile.php?id=100015916248154" class="contacts__link"><img src="icons/social/facebook-footer.svg" alt="facebook"></a>
                         <a href="https://t.me/oleg_0001k" class="contacts__link"><img src="icons/social/telegram-footer.svg" alt="telegram"></a>
                         <a href="https://www.instagram.com/l.oleg.a?igsh=MTR5ampmb3Q2M3A2OA==" class="contacts__link"><img src="icons/social/instagram-footer.svg" alt="instagram"></a>
-                        <a href="#" class="contacts__link"><img src="icons/social/github-white.svg" alt="github"></a>
+                        <a href="https://github.com/Gachibindera" class="contacts__link"><img src="icons/social/github-white.svg" alt="github"></a>
                     </div>
                     <p class="contacts__text">Or leave your details and I'll email you myself:</p>
 
-                    <form action="#" class="contacts__form">
+                    <form id="contacts" action="#" class="contacts__form">
                         <div class="contacts__input">
-                            <input required type="text" name="name" id="name">
+                            <input type="text" name="name" id="name">
                             <label for="name">Your name</label>
                         </div>
                         <div class="contacts__input">
-                            <input required type="text" name="email" id="email">
+                            <input type="email" name="email" id="email">
                             <label for="email">Your email</label>
                         </div>
                         <div class="contacts__textarea">
@@ -409,7 +409,7 @@
                         <div class="contacts__triggers">
                             <button class="btn contacts__btn">Send a message</button>
                             <div class="contacts__policy">
-                                <input required type="checkbox">
+                                <input name="checkbox" id="checkbox" type="checkbox">
                                 <span>I agree to the <a href="/policy.html">privacy policy</a></span>
                             </div>
                         </div>
@@ -420,6 +420,23 @@
     </section>
 
 
+    <div class="overlay">
+        <div class="modal" id="wait">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Please wait.</div>
+        </div>
+
+        <div class="modal" id="thanks">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Thank you for your submission!</div>
+            <div class="modal__descr">I will be in touch with you shortly!</div>
+        </div>
+    </div>  
+    
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
 </body>
 </html>
